Reorganize commons, add additional examples to cpp_world

--- a/cpp_world/CMakeLists.txt
+++ b/cpp_world/CMakeLists.txt
@@ -5,12 +5,21 @@ project("cpp_world")
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable("cpp_world"
-"../_mzk84_utils/_mzk84_utils.h"
-"../_mzk84_utils/_std_includes.h"
+"${CMAKE_CURRENT_SOURCE_DIR}/../_mzk84_commons/mzk84_commons.h"
 "src/_main.cpp"
+"src/_std_includes.h"
 "src/CandyCrush1D.h"
 "src/CandyCrush1D.cpp"
 "src/CandyCrush1DTest.h"
+"src/LargeFileSorting.h"
+"src/LargeFileSorting.cpp"
+"src/LargeFileSortingTest.h"
+"src/ListElem.h"
+"src/ListElemImpl.h"
+"src/ListElemImpl.cpp"
+"src/ListFunctions.h"
+"src/ListFunctions.cpp"
+"src/ListTestSuite.h"
 "src/MaxNumOfUniqueChars.h"
 "src/MaxNumOfUniqueChars.cpp"
 "src/MaxNumOfUniqueCharsTest.h"
@@ -20,4 +29,8 @@ add_executable("cpp_world"
 "src/VisitingTree.h"
 "src/VisitingTreeTest.h")
 
-target_include_directories("cpp_world" PRIVATE "../_mzk84_utils")
+find_package(GTest CONFIG REQUIRED)
+
+target_include_directories("cpp_world" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../_mzk84_commons")
+
+target_link_libraries("cpp_world" PRIVATE GTest::gmock GTest::gtest GTest::gmock_main GTest::gtest_main)
