Refactored bunch of code and moved additional examples to GoogleTest

--- a/cpp_world/CMakeLists.txt
+++ b/cpp_world/CMakeLists.txt
@@ -6,8 +6,12 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(GTest_DIR "~/vcpkg/installed/x64-linux/share/GTest")
 
+set(mkz84_commons_dir "${CMAKE_CURRENT_SOURCE_DIR}/../_mzk84_commons")
+
+find_package(GTest CONFIG REQUIRED)
+
 add_executable("cpp_world"
-"${CMAKE_CURRENT_SOURCE_DIR}/../_mzk84_commons/mzk84_commons.h"
+"${mkz84_commons_dir}/mzk84_commons.h"
 "src/_main.cpp"
 "src/_std_includes.h"
 "src/CandyCrush1D.h"
@@ -21,7 +25,7 @@ add_executable("cpp_world"
 "src/ListElemImpl.cpp"
 "src/ListFunctions.h"
 "src/ListFunctions.cpp"
-"src/ListTestSuite.h"
+"src/ListFunctionsTest.h"
 "src/MaxNumOfUniqueChars.h"
 "src/MaxNumOfUniqueChars.cpp"
 "src/MaxNumOfUniqueCharsTest.h"
@@ -31,8 +35,6 @@ add_executable("cpp_world"
 "src/VisitingTree.h"
 "src/VisitingTreeTest.h")
 
-find_package(GTest CONFIG REQUIRED)
-
-target_include_directories("cpp_world" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../_mzk84_commons")
+target_include_directories("cpp_world" PRIVATE "${mkz84_commons_dir}")
 
 target_link_libraries("cpp_world" PRIVATE GTest::gmock GTest::gtest GTest::gmock_main GTest::gtest_main)
