Minor update to CMakeLists.txt files

--- a/pow_sha1/CMakeLists.txt
+++ b/pow_sha1/CMakeLists.txt
@@ -4,6 +4,10 @@ project("pow_sha1")
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(mkz84_commons_dir "${CMAKE_CURRENT_SOURCE_DIR}/../_mzk84_commons")
+
+find_package(OpenSSL REQUIRED)
+
 add_executable("pow_sha1"
 "../_mzk84_commons/mzk84_commons.h"
 "src/_includes.h"
@@ -13,5 +17,5 @@ add_executable("pow_sha1"
 
 target_include_directories("pow_sha1" PRIVATE "../_mzk84_commons")
 
-find_package(OpenSSL REQUIRED)
+
 target_link_libraries("pow_sha1" PRIVATE OpenSSL::Crypto)
